# LearningCMake

./: README.md
AddCheckSymbol/: CMakeLists.txt  README.md
AddCheckSymbol/MathFunctions/: CMakeLists.txt
AddLibrary/: CMakeLists.txt  CalculateSqrtConfig.h.in  README.md
AddLibrary/MathFunctions/: CMakeLists.txt
InstallAndTest/: CMakeLists.txt  main.cpp
InstallAndTest/MathFunctions/: CMakeLists.txt
PackageInstaller/: CMakeLists.txt  License.txt  PackageInstaller.bat  main.cpp
SetSharedLib/: CMakeLists.txt  main.cpp
SetSharedLib/MathFunctions/: CMakeLists.txt  MathFunctions.h  MySqrt.h
SetVersion/: CMakeLists.txt  CalculateSqrtConfig.h.in  README.md  main.cpp
UsageRequirements/: README.md
VariablesTest/: CMakeLists.txt  README.md
VariablesTest/SubDirecTest/: CMakeLists.txt
